<resources>
    <string name="app_name">Library Course</string>
    <string name="search_hint">Search</string>

    <string name="main_delete_btn">Delete book</string>
    <string name="main_edit_btn">Edit book</string>
    <string name="main_upload_btn">Upload Book</string>

    <string name="upload_title">Title</string>
    <string name="upload_author">Author</string>
    <string name="upload_editorial">Editorial</string>
    <string name="upload_year">Year</string>
    <string name="upload_image">+ Add Photo</string>
    <string name="upload_activity_title">Upload Book</string>
    <string name="upload_upload_btn">Upload</string>

    <string name="upload_price">Price</string>
    <string name="upload_category">Category</string>

    <string name="main_title">Select one book</string>
    <string name="book_item_select">Selected Book</string>

</resources>